react-app/src/components/Sidebar/Sidebar.css
.sidebar-container {
  position: fixed;
  background-color: black;
  display: flex;
  flex-direction: column;
  width: 20%;
  height: 100%;
  align-items: center;
  justify-content: space-between;
  left: 0;
  top: 0;
  bottom: 0;
  padding: 10px;
  z-index: 0;
}

.sidebar-top {
  display: flex;
  align-items: center;
  flex-direction: column;
  margin-bottom: 20px;
}

.sidebar-bottom {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-bottom: 20px;
}

.temp-title {
  color: white;
}

.spotify-logo {
  padding-right: 10px;
  color: green;
  font-size: 20px;
  text-align: center;
}

.main-logo {
  display: flex;
  align-items: center;
}

.spotify-logo:hover {
  color: rgb(1, 145, 1);
}

.form-input {
  background: rgb(255, 255, 255, 0.7);
  border: none;
  border-radius: 3px;
  color: black;
}

.sidebar-links {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.sidebar-link,
.credits {
  color: rgb(219, 219, 219);
  text-decoration: none;
  font-size: 20px;
  text-align: center;
  transition: 0.2s ease-in-out;
}
.sidebar-link:hover,
.logout-button:hover,
.credits:hover {
  color: rgb(36, 80, 202);
  cursor: pointer;
}

#playlists-sidebar:hover {
    color: blue;
    
}

.add-playlist-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.logout-button {
  background: none;
  border: none;
  color: white;
  font-size: 15px;
  margin-bottom: 200px;
}

.contrib-name {
  color: white;
  font-size: 15px;
  text-align: center;
}

.contriubtors {
  display: flex;
  width: 80%;
  justify-content: center;
}

.social-media {
  padding-bottom: 150px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.social-media-logos {
  color: darkgreen;
  font-size: 15px;
  padding: 0 5px;
}

.social-media-logos:hover {
  color: rgb(1, 145, 1);
}

